docs/ops/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fsm-backend
  labels:
    app: fsm-backend
spec:
  selector:
    app: fsm-backend
  ports:
    - name: http
      port: 80
      targetPort: 3000
